# Hatena-Intern-2020-Template

./: LICENSE  Makefile  README.md  docker-compose.yml  skaffold.yaml
docker-compose/: init-account-db.sh  init-blog-db.sh
docs/: exercise.md
k8s/: kustomization.yaml  namespace.yaml
k8s/account/: app.yaml  db.yaml  kustomization.yaml  test.yaml
k8s/account/config/: schema.sql
k8s/account/secret/: ecdsa-private.pem
k8s/blog/: app.yaml  db.yaml  kustomization.yaml  test.yaml
k8s/blog/config/: schema.sql
k8s/blog/secret/: account-ecdsa-public.pem
k8s/renderer-go/: app.yaml  kustomization.yaml
k8s/system/: sa.yaml
k8s/title-fetcher/: app.yaml  kustomization.yaml
pb/: README.md  account.proto  renderer.proto  title_fetcher.proto
pb/go/account/: account.pb.go
pb/protoc-go/: Dockerfile  go.mod  tools.go
pb/protoc-ts/: Dockerfile
pb/scripts/: compile
pb/ts/account/: account_grpc_pb.d.ts  account_grpc_pb.js  account_pb.d.ts  account_pb.js
pb/ts/renderer/: renderer_grpc_pb.d.ts  renderer_pb.d.ts  (+1 more)
services/account/: Dockerfile  Dockerfile.test  README.md  go.mod  go.sum  main.go
services/blog/: Dockerfile  Dockerfile.test  Makefile  README.md  go.mod  go.sum  main.go  tools.go
services/renderer-go/: Dockerfile  Makefile  README.md  go.mod  go.sum  main.go
services/renderer-ts/: .dockerignore  .eslintrc.js  .prettierrc.js  Dockerfile  README.md  jest.config.js  package.json  tsconfig.build.json  tsconfig.json
services/title-fetcher/: .gitignore  Cargo.toml  Dockerfile  build.rs
services/title-fetcher/src/: lib.rs  main.rs  parser.rs
(+87 files in other folders)
