[package]
name = "title-fetcher"
version = "0.1.0"
authors = ["Nakano Masaki <namachan10777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3.1"
tokio = { version="0.2.22", features=["macros"] }
prost = "0.6.1"

[build-dependencies]
tonic-build = "0.3.1"
